fixed alignment of logo

--- a/resources/scss/_navbar.scss
+++ b/resources/scss/_navbar.scss
@@ -4,6 +4,6 @@
   }
 }
 
-.navbar-brand {
-  padding: 7px 10px;
+h1 .navbar-brand {
+  float: none;
 }
